--- a/styles1.css
+++ b/styles1.css
@@ -6,12 +6,22 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
-.banner-containers{
-    flex-direction: columns;
+.banner-container{
+    width: 100%;
+    height: 600px;
 }
 
-.banner-containers img {
-    width: 343px;
-	height:1040px;
+.banner-container img {
+    width: 100%;
+    height: 600px;
 	align-items: center;
 }
+
+@media (min-width: 768px) {
+    .banner-container{
+        height: 100%;
+    }
+    .banner-container img {
+        height: 100%;
+    }
+}     
