--- a/styles1.css
+++ b/styles1.css
@@ -25,3 +25,14 @@
         height: 100%;
     }
 }     
+
+@media (min-width: 992px) {
+    .banner-container{
+        width: 400px;
+        height: 500px;
+    }
+    .banner-container img {
+        width: 400px;
+        height: 500px;
+    }
+}  
