--- a/style-episodios.css
+++ b/style-episodios.css
@@ -15,26 +15,32 @@ body{
 
 body h1 {
     color: white;
-    }
+}
 
 body h1:hover{
-        color:gold;
-    }
+    color:gold;
+}
 
 body h1 {
     transition: color 0.8s linear 0.2s;
-    }
+}
 
 thead tr td {
     font-weight: bold;
     font-size: 15px;  
-    }
+}
+
+.table-responsive {
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 200px;
+}
 
 .table {
     background-color:transparent; 
     width:auto;
     height:420px;
-    }
+}
 
 .table td {
     color: white ;
@@ -53,3 +59,11 @@ thead tr td {
 .table tr td img {
     transform: rotate(20deg);
 }
+
+@media (min-width: 768px) {
+    .table-responsive {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+}     
+
