--- a/style-imperdibleconreview.css
+++ b/style-imperdibleconreview.css
@@ -6,3 +6,29 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
+     
+    #trailers .table-responsive {
+        padding-right: 5px;
+        padding-left: 5px;
+        padding-bottom: 35px;
+    }
+    
+    #trailers .table {
+        background-color:transparent; 
+        width:fit-content;
+        height:auto;
+    }
+    
+    #trailers .table td {
+        color: transparent;
+    }
+       
+   
+    @media (min-width: 768px) {
+        .table-responsive {
+            padding-right: 20px;
+            padding-left: 20px;
+        }
+    }     
+    
+    
