--- a/styles-personajes-carrousel.css
+++ b/styles-personajes-carrousel.css
@@ -4,35 +4,71 @@
     list-style-type: none;
     box-sizing:border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-
-
-.c-wrapper {
-    width: 24%;
-    margin: 2%;
-    color:white;
-    
 }
 
-#carouselExampleDark {
+main {
+    margin-bottom: 190px;
+}
+.card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#vision {
+    margin-top: 50px;
+}
+
+#agatha {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+  }
+  
+.flip-card-inner {
+    position: relative;
     width: 100%;
-    margin: auto;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: black;
+    color: black;
+}
+  
+.flip-card-back {
+    background-color: black;
     color: white;
-      
+    transform: rotateY(180deg);
 }
 
- .carousel-dark .carousel-caption {
-     color: white;
- }
-
- 
-.carousel-dark .carousel-indicators [data-bs-target] {
-	background-color: whitesmoke;
-}
- 
-.carousel-indicators {
-    margin-bottom: -200px;
-}
-
-
-
+@media (min-width: 768px) {
+    #vision {
+        margin: 0;
+    }
+    #agatha {
+        margin-top: 50px;
+    }
+}  
